Bug #12203
FMA fault ASRUs missing FMRI annotations
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Currently the FMRI in the ASRU field of a fault event does not get properly annotated with the HC:// scheme info about the root.
This is annoying because it means that you can't take the FMRI that fmadm faulty
spits out and put it straight in as an argument to e.g. fmtopo -p
. The resource
field seems to be the only one in the fault that gets annotated properly.
Updated by Alex Wilson 12 months ago
Testing notes:
- Built and installed on OmniOS
- Tested together with #12205
- Injected a
fault.io.nic.transceiver.notsupp
fault with fminject - Verified that
fmadm faulty
output andfmdump -V
now contain complete FMRIs with annotations like:hc://:product-id=PowerEdge-R630:server-id=valium-temp:chassis-id=1GZM252:serial=CN053HVN3B53PRF:part=616740003:revision=B/motherboard=0/hostbridge=9/pciexrc=9/pciexbus=129/pciexdev=0/pciexfn=0/port=0/transceiver=0
rather than the previous:hc:///motherboard=0/hostbridge=9/pciexrc=9/pciexbus=129/pciexdev=0/pciexfn=0/port=0/transceiver=0
- Also built and tested on SmartOS
Updated by Electric Monk 12 months ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit da40b2648878aa9434c7199422846fe5a7032714
commit da40b2648878aa9434c7199422846fe5a7032714 Author: Alex Wilson <alex@uq.edu.au> Date: 2020-03-04T02:46:53.000Z 12203 FMA fault ASRUs missing FMRI annotations Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Paul Winder <paul@winders.demon.co.uk> Reviewed by: Rob Johnston <rob.johnston@joyent.com> Approved by: Garrett D'Amore <garrett@damore.org>